# frozen

./: CMakeLists.txt  Makefile  README.md  elsa.pc.in  frozen.c  frozen.h  size_test.c  unit_test.c
elsa/: escape.c  fread.c  next.c  prettify.c  printer.c  printf.c  scanf.c  setf.c  util.h  walk.c
frozen/: escape.c  fread.c  next.c  prettify.c  printer.c  printf.c  scanf.c  setf.c  util.h  walk.c
include/: elsa.h  frozen.h
